--- a/问卷调查/问卷调查.csproj
+++ b/问卷调查/问卷调查.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="sqlSugarCore" Version="4.9.9.4" />
   </ItemGroup>
 
   <ItemGroup>
