--- a/问卷调查/appsettings.json
+++ b/问卷调查/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MssqlConnectionString": "server=127.0.0.1\\temp;uid=sa;pwd=123456;database=FormDB"
 }
