--- a/问卷调查/appsettings.json
+++ b/问卷调查/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "MssqlConnectionString": "server=127.0.0.1\\temp;uid=sa;pwd=123456;database=FormDB"
+  "MssqlConnectionString": "server=101.37.87.53\\alan;uid=sa;pwd=123456;database=FormDB"
 }
