--- a/问卷调查/appsettings.json
+++ b/问卷调查/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "MssqlConnectionString": "server=172.30.100.57;uid=sa;pwd=123456;database=FormDB"
+  "MssqlConnectionString": "server=.;uid=sa;pwd=123456;database=FormDB"
 }
