--- a/问卷调查/appsettings.json
+++ b/问卷调查/appsettings.json
@@ -5,5 +5,6 @@
     }
   },
   "AllowedHosts": "*",
-  "MssqlConnectionString": "server=.;uid=sa;pwd=123456;database=FormDB"
+  "MssqlConnectionString": "server=172.30.100.57;uid=sa;pwd=Sa123456;database=FormDB",
+  "userpwd": "942518f0a8c84d728f52c5706e89ac3b"
 }
