--- a/问卷调查/appsettings.json
+++ b/问卷调查/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MssqlConnectionString": "server=.;uid=sa;pwd=123456;database=FormDB",
+  "MssqlConnectionString": "server=(localdb)\\MSSQLLocalDB;integrated security=true;database=FormDB",
   "userpwd": "942518f0a8c84d728f52c5706e89ac3b",
-  "syncpatientapppath":"D:\\1.bat"
+  "syncpatientapppath": "D:\\1.bat"
 }
