--- a/问卷调查/问卷调查.csproj
+++ b/问卷调查/问卷调查.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="sqlSugarCore" Version="4.9.9.4" />
+    <PackageReference Include="TencentCloudSDK" Version="3.0.42" />
   </ItemGroup>
 
   <ItemGroup>
