--- a/问卷调查/appsettings.json
+++ b/问卷调查/appsettings.json
@@ -7,5 +7,10 @@
   "AllowedHosts": "*",
   "MssqlConnectionString": "server=(localdb)\\MSSQLLocalDB;integrated security=true;database=FormDB",
   "userpwd": "942518f0a8c84d728f52c5706e89ac3b",
-  "syncpatientapppath": "D:\\1.bat"
+  "syncpatientapppath": "D:\\1.bat",
+  "number1": "number1-99",
+  "number2": "number1-99",
+  "number3": "number1-99",
+  "number4": "number1-99",
+  "number5": "number1-99"
 }
